terraform/06-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc_kthong.id

  tags = {
    "Name" = "igw"
  }
}
